--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editUserId" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -131,7 +131,7 @@
         android:id="@+id/textTargetUri"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="http://192.168.0.200:3000"
+        android:text="http://192.168.0.200:4000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -144,9 +144,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Demo v0.1.0"
+        android:text="SimpleCallDemo v0.0.1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />
 
 </android.support.constraint.ConstraintLayout>
